--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="text">Заливаем файлы на веб-сервер с помощью команды git clone.</div>
 
         <p class="num">1. Получаем главную страницу методом GET в протоколе HTTP 1.0</p>
-        <img src="images/ex2-1.png" alt="HTTP 1.0">
+        <img src="images/http1.png" alt="HTTP 1.0">
 
         <p class="num">2. Получаем внутреннюю страницу методом GET в протоколе HTTP 1.1</p>
         <img src="images/ex2-2nf.png" alt="HTTP 1.1">
